tests/performance/tools/netchecker/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netchecker-ingress
  namespace: netchecker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nc.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nc
            port:
              number: 8080
  tls:
  - hosts:
    - nc.example.com
    secretName: nc
---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: tcpr
spec:
  certificateOwnerRef: false
  dnsNames:
  - nc.example.com
  issuerRef:
    kind: ClusterIssuer
    name: letsencrypt
  secretName: nc
