tests/performance/tools/netchecker/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nc
  namespace: nc
  labels:
    app: netchecker
spec:
  selector:
    app: netchecker
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  type: ClusterIP
